# fdtd-full-wave-simulation-ris-code

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
ris_system/: __init__.py  config.py  convergence.py  data.py  geometry.py  materials.py  monitors.py  postprocess.py  simulation.py  sources.py  utils.py  visualization.py  workflow.py
tikz/: ris_layout_tikz.tex  ris_simulation_setup_tikz.tex
